name:                hircine
version:             0
synopsis:            A modern, extensible IRC bot
description:
    Hircine is an IRC bot written and extensible in Haskell.
homepage:            http://lambda.xyz/hircine
license:             BSD3
license-file:        LICENSE
author:              Chris Wong
maintainer:          lambda.fairy@gmail.com
copyright:           2014 Chris Wong
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
    exposed-modules:
        Hircine
        Hircine.Core
        Hircine.Stream
    other-modules:
        Hircine.Core.Types
        Hircine.Core.Parser
    build-depends:
        base == 4.*,
        attoparsec == 0.12.*,
        bytestring,
        io-streams,
        network,
        network-simple,
        text,
        transformers
    default-language:    Haskell2010
    ghc-options:         -Wall

source-repository head
    type:                git
    location:            https://github.com/lfairy/hircine.git
