name: hircine
version: 0
synopsis: A modern, extensible IRC bot
description:
    Hircine is an IRC bot written and extensible in Haskell.
homepage: http://lambda.xyz/hircine
license: Apache-2.0
license-file: LICENSE
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2015 Chris Wong
category: Network
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10

flag brigitte
    description: build example bot ("brigitte")
    default: False
    manual: True

library
    exposed-modules:
        Hircine
        Hircine.Core
        Hircine.Command
        Hircine.Monad
        Hircine.Stream
    other-modules:
        Hircine.Core.Types
        Hircine.Core.Parser
    build-depends:
        base >= 4.6 && < 5,
        attoparsec,
        bytestring,
        network,
        slave-thread,
        text,
        transformers
    default-language: Haskell2010
    ghc-options: -Wall

executable brigitte
    hs-source-dirs: brigitte
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts
    other-modules:
        Types

    if !flag(brigitte)
        buildable: False
    else
        build-depends:
            base >= 4.8 && < 5,
            acid-state,
            aeson,
            bytestring,
            containers,
            hircine,
            http-client,
            lens,
            lens-aeson,
            mtl,
            network-simple,
            safecopy,
            wreq,
            text,
            transformers,
            unix

source-repository head
    type: git
    location: https://github.com/lfairy/hircine.git
