name: hircine
version: 0
synopsis: A modern, extensible IRC bot
description:
    Hircine is an IRC bot written and extensible in Haskell.
homepage: http://lambda.xyz/hircine
license: Apache-2.0
license-file: LICENSE
author: Chris Wong
maintainer: lambda.fairy@gmail.com
copyright: 2015 Chris Wong
category: Network
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10

flag bots
    description: build Cargobot and Hackagebot
    default: False
    manual: True

library
    exposed-modules:
        Hircine
        Hircine.Core
        Hircine.Command
        Hircine.Monad
        Hircine.Stream
    other-modules:
        Hircine.Core.Types
        Hircine.Core.Parser
    build-depends:
        base >= 4.8 && < 5,
        attoparsec,
        bytestring,
        network,
        slave-thread,
        text,
        transformers
    default-language: Haskell2010
    ghc-options: -Wall

executable cargobot
    hs-source-dirs: bots
    main-is: Cargobot.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-T
    other-modules:
        Utils

    if !flag(bots)
        buildable: False
    else
        build-depends:
            base >= 4.8 && < 5,
            aeson,
            bytestring,
            clock,
            connection,
            containers,
            data-default-class,
            ekg,
            hircine,
            http-client,
            http-client-tls,
            http-types,
            text,
            transformers,
            unix,
            unordered-containers

executable hackagebot
    hs-source-dirs: bots
    main-is: Hackagebot.hs
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-T
    other-modules:
        Utils

    if !flag(bots)
        buildable: False
    else
        build-depends:
            base >= 4.8 && < 5,
            bytestring,
            clock,
            connection,
            containers,
            data-default-class,
            ekg,
            feed,
            hircine,
            http-client,
            http-client-tls,
            http-types,
            text,
            transformers,
            unix

source-repository head
    type: git
    location: https://github.com/lfairy/hircine.git
